Update CheckBox, Select and DB Scale styles, fix CheckBox/Select Ghost Clicks on iOS.

--- a/STYL/UI/App/AudioRecorder.styl
+++ b/STYL/UI/App/AudioRecorder.styl
@@ -50,7 +50,7 @@
       height 16px
 
       font-size 10px
-      line-height 16px
+      line-height 17px
 
       div
         position absolute
